# Qt-calc-project

./: .gitignore  CMakeLists.txt
src/: main.cpp
